examples/invalid/syntaxErr/do-while/do-whileNodo.wacc
# do-while missing opening do

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
      int x = 1;
      int y = x * 2
  while true
end